--- a/src/searchpage.html
+++ b/src/searchpage.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="searchmachine.js" defer></script>
     <title>Title</title>
 </head>
 <body>
